--- a/hello-js/index.html
+++ b/hello-js/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="test.js"></script>
+		<script src="do_while.js"></script>
 	</head>
 	<body>
 		this is a basic HTML page
